# serializer version: 1
# name: test_build_example
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-3006292c/example-3006292c-0.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-3006292c/example-3006292c-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_3006292c"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_3006292c"]
        
        [project]
        name = "example-3006292c"
        version = "0.0.0"
        dependencies = [
            '''example-a-3006292c''',
        ]
        requires-python = ">=3.8"
        description = '''This is an example scenario, in which the user depends on a single package `a` which requires `b`.'''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-3006292c/example-3006292c-0.0.0/src/example_3006292c/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-3006292c/example-a-3006292c-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-3006292c/example-a-3006292c-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_a_3006292c"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_a_3006292c"]
        
        [project]
        name = "example-a-3006292c"
        version = "1.0.0"
        dependencies = [
            '''example-b-3006292c>1.0.0''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-3006292c/example-a-3006292c-1.0.0/src/example_a_3006292c/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-3006292c/example-b-3006292c-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-3006292c/example-b-3006292c-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_3006292c"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_3006292c"]
        
        [project]
        name = "example-b-3006292c"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-3006292c/example-b-3006292c-1.0.0/src/example_b_3006292c/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-3006292c/example-b-3006292c-2.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-3006292c/example-b-3006292c-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_3006292c"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_3006292c"]
        
        [project]
        name = "example-b-3006292c"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-3006292c/example-b-3006292c-2.0.0/src/example_b_3006292c/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-3006292c/example-b-3006292c-3.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-3006292c/example-b-3006292c-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_3006292c"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_3006292c"]
        
        [project]
        name = "example-b-3006292c"
        version = "3.0.0"
        dependencies = [
            '''example-c-3006292c''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-3006292c/example-b-3006292c-3.0.0/src/example_b_3006292c/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-3006292c/example_3006292c-0.0.0.tar.gz': 'md5:15eeeec589e819086d00338775d4e7c0',
      'dist/example-3006292c/example_a_3006292c-1.0.0-py3-none-any.whl': 'md5:23325e6fbef51c4aac9ab42b5e6bbe27',
      'dist/example-3006292c/example_a_3006292c-1.0.0.tar.gz': 'md5:c9d09b056c3bae0af9ef3452a3557170',
      'dist/example-3006292c/example_b_3006292c-1.0.0-py3-none-any.whl': 'md5:1929913ca8b9897c37be2c99a7724e48',
      'dist/example-3006292c/example_b_3006292c-1.0.0.tar.gz': 'md5:7f67a0c8d24c51fb4cfa4af985623473',
      'dist/example-3006292c/example_b_3006292c-2.0.0-py3-none-any.whl': 'md5:df67d7821c756f82fb7b8965ae818324',
      'dist/example-3006292c/example_b_3006292c-2.0.0.tar.gz': 'md5:6ca5c139db6de24295a3e8d79958b53c',
      'dist/example-3006292c/example_b_3006292c-3.0.0-py3-none-any.whl': 'md5:95e4d109682aa58d2e853a31de43ca91',
      'dist/example-3006292c/example_b_3006292c-3.0.0.tar.gz': 'md5:d0e674bcdcf5e5e3c9e6fa44db899563',
      'tree': '''
        test_build_example0
        ├── build
        │   └── example-3006292c
        │       ├── example-3006292c-0.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_3006292c
        │       │           └── __init__.py
        │       ├── example-a-3006292c-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_a_3006292c
        │       │           └── __init__.py
        │       ├── example-b-3006292c-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_3006292c
        │       │           └── __init__.py
        │       ├── example-b-3006292c-2.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_3006292c
        │       │           └── __init__.py
        │       └── example-b-3006292c-3.0.0
        │           ├── .gitignore
        │           ├── pyproject.toml
        │           └── src
        │               └── example_b_3006292c
        │                   └── __init__.py
        └── dist
            └── example-3006292c
                ├── example_3006292c-0.0.0.tar.gz
                ├── example_a_3006292c-1.0.0-py3-none-any.whl
                ├── example_a_3006292c-1.0.0.tar.gz
                ├── example_b_3006292c-1.0.0-py3-none-any.whl
                ├── example_b_3006292c-1.0.0.tar.gz
                ├── example_b_3006292c-2.0.0-py3-none-any.whl
                ├── example_b_3006292c-2.0.0.tar.gz
                ├── example_b_3006292c-3.0.0-py3-none-any.whl
                └── example_b_3006292c-3.0.0.tar.gz
        
        19 directories, 24 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-3006292c
  
    ''',
  })
# ---
# name: test_build_example_already_exists
  dict({
    'exit_code': 1,
    'filesystem': dict({
      'tree': '''
        test_build_example_already_exi0
        └── build
            └── example-3006292c
        
        2 directories
  
      ''',
    }),
    'stderr': '''
      Building 'example-3006292c' in directory '[PWD]/build/example-3006292c'
      Destination directory '[PWD]/build/example-3006292c' already exists. Pass `--force` to allow removal.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_example_already_exists_with_rm_flag
  dict({
    'exit_code': 2,
    'stderr': '<not included>',
    'stdout': '',
  })
# ---
# name: test_build_example_short_names
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-3006292c/a-3006292c-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-3006292c/a-3006292c-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/a_3006292c"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/a_3006292c"]
        
        [project]
        name = "a-3006292c"
        version = "1.0.0"
        dependencies = [
            '''b-3006292c>1.0.0''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-3006292c/a-3006292c-1.0.0/src/a_3006292c/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-3006292c/b-3006292c-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-3006292c/b-3006292c-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/b_3006292c"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/b_3006292c"]
        
        [project]
        name = "b-3006292c"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-3006292c/b-3006292c-1.0.0/src/b_3006292c/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-3006292c/b-3006292c-2.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-3006292c/b-3006292c-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/b_3006292c"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/b_3006292c"]
        
        [project]
        name = "b-3006292c"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-3006292c/b-3006292c-2.0.0/src/b_3006292c/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-3006292c/b-3006292c-3.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-3006292c/b-3006292c-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/b_3006292c"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/b_3006292c"]
        
        [project]
        name = "b-3006292c"
        version = "3.0.0"
        dependencies = [
            '''c-3006292c''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-3006292c/b-3006292c-3.0.0/src/b_3006292c/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'build/example-3006292c/example-3006292c-0.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-3006292c/example-3006292c-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_3006292c"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_3006292c"]
        
        [project]
        name = "example-3006292c"
        version = "0.0.0"
        dependencies = [
            '''a-3006292c''',
        ]
        requires-python = ">=3.8"
        description = '''This is an example scenario, in which the user depends on a single package `a` which requires `b`.'''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-3006292c/example-3006292c-0.0.0/src/example_3006292c/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'dist/example-3006292c/a_3006292c-1.0.0-py3-none-any.whl': 'md5:4c513d1d4831b99c085ba4ba058b2024',
      'dist/example-3006292c/a_3006292c-1.0.0.tar.gz': 'md5:b10cfdc95f949226c29022107a614fe8',
      'dist/example-3006292c/b_3006292c-1.0.0-py3-none-any.whl': 'md5:5bae367c16e39e896ffaed835b4c287f',
      'dist/example-3006292c/b_3006292c-1.0.0.tar.gz': 'md5:7f643cb450375d5fa696c7751472f2d8',
      'dist/example-3006292c/b_3006292c-2.0.0-py3-none-any.whl': 'md5:19fc6be909a217581e1308d9b7b94243',
      'dist/example-3006292c/b_3006292c-2.0.0.tar.gz': 'md5:3dea0c6d614668566b014b93f8c5922f',
      'dist/example-3006292c/b_3006292c-3.0.0-py3-none-any.whl': 'md5:f180d5d03f7b85bc5cbf69961fec8a71',
      'dist/example-3006292c/b_3006292c-3.0.0.tar.gz': 'md5:a783b235d1753547bae715a82295b6e6',
      'dist/example-3006292c/example_3006292c-0.0.0.tar.gz': 'md5:a9ec9ef4b80a472824828e2c784d3aac',
      'tree': '''
        test_build_example_short_names0
        ├── build
        │   └── example-3006292c
        │       ├── a-3006292c-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── a_3006292c
        │       │           └── __init__.py
        │       ├── b-3006292c-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── b_3006292c
        │       │           └── __init__.py
        │       ├── b-3006292c-2.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── b_3006292c
        │       │           └── __init__.py
        │       ├── b-3006292c-3.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── b_3006292c
        │       │           └── __init__.py
        │       └── example-3006292c-0.0.0
        │           ├── .gitignore
        │           ├── pyproject.toml
        │           └── src
        │               └── example_3006292c
        │                   └── __init__.py
        └── dist
            └── example-3006292c
                ├── a_3006292c-1.0.0-py3-none-any.whl
                ├── a_3006292c-1.0.0.tar.gz
                ├── b_3006292c-1.0.0-py3-none-any.whl
                ├── b_3006292c-1.0.0.tar.gz
                ├── b_3006292c-2.0.0-py3-none-any.whl
                ├── b_3006292c-2.0.0.tar.gz
                ├── b_3006292c-3.0.0-py3-none-any.whl
                ├── b_3006292c-3.0.0.tar.gz
                └── example_3006292c-0.0.0.tar.gz
        
        19 directories, 24 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-3006292c
  
    ''',
  })
# ---
# name: test_build_example_with_seed
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-019915d4/example-019915d4-0.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-019915d4/example-019915d4-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_019915d4"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_019915d4"]
        
        [project]
        name = "example-019915d4"
        version = "0.0.0"
        dependencies = [
            '''example-a-019915d4''',
        ]
        requires-python = ">=3.8"
        description = '''This is an example scenario, in which the user depends on a single package `a` which requires `b`.'''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-019915d4/example-019915d4-0.0.0/src/example_019915d4/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-019915d4/example-a-019915d4-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-019915d4/example-a-019915d4-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_a_019915d4"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_a_019915d4"]
        
        [project]
        name = "example-a-019915d4"
        version = "1.0.0"
        dependencies = [
            '''example-b-019915d4>1.0.0''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-019915d4/example-a-019915d4-1.0.0/src/example_a_019915d4/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-019915d4/example-b-019915d4-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-019915d4/example-b-019915d4-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_019915d4"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_019915d4"]
        
        [project]
        name = "example-b-019915d4"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-019915d4/example-b-019915d4-1.0.0/src/example_b_019915d4/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-019915d4/example-b-019915d4-2.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-019915d4/example-b-019915d4-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_019915d4"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_019915d4"]
        
        [project]
        name = "example-b-019915d4"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-019915d4/example-b-019915d4-2.0.0/src/example_b_019915d4/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-019915d4/example-b-019915d4-3.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-019915d4/example-b-019915d4-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_019915d4"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_019915d4"]
        
        [project]
        name = "example-b-019915d4"
        version = "3.0.0"
        dependencies = [
            '''example-c-019915d4''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-019915d4/example-b-019915d4-3.0.0/src/example_b_019915d4/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-019915d4/example_019915d4-0.0.0.tar.gz': 'md5:f01ce4e6b8d79c8ae1d14e704e109b47',
      'dist/example-019915d4/example_a_019915d4-1.0.0-py3-none-any.whl': 'md5:30aef97f771f2e37f3b8bde68b2c7ada',
      'dist/example-019915d4/example_a_019915d4-1.0.0.tar.gz': 'md5:833c7c33ed01e87b9d36360e7dca9f85',
      'dist/example-019915d4/example_b_019915d4-1.0.0-py3-none-any.whl': 'md5:5826e9d4dfe78f9f8267f2b1ff9a3b83',
      'dist/example-019915d4/example_b_019915d4-1.0.0.tar.gz': 'md5:2f420ad3fa447bb6dc241cc5fb9d1d05',
      'dist/example-019915d4/example_b_019915d4-2.0.0-py3-none-any.whl': 'md5:3e547b2ecae44d2d29e4a31f331c97b0',
      'dist/example-019915d4/example_b_019915d4-2.0.0.tar.gz': 'md5:bec2925e800336d1f75580a4aeacec03',
      'dist/example-019915d4/example_b_019915d4-3.0.0-py3-none-any.whl': 'md5:0e24520886b87393ab51bbe0a64b8b87',
      'dist/example-019915d4/example_b_019915d4-3.0.0.tar.gz': 'md5:8c70b2a054b23ec62bc3cf2d531bfba4',
      'tree': '''
        test_build_example_with_seed0
        ├── build
        │   └── example-019915d4
        │       ├── example-019915d4-0.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_019915d4
        │       │           └── __init__.py
        │       ├── example-a-019915d4-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_a_019915d4
        │       │           └── __init__.py
        │       ├── example-b-019915d4-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_019915d4
        │       │           └── __init__.py
        │       ├── example-b-019915d4-2.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_019915d4
        │       │           └── __init__.py
        │       └── example-b-019915d4-3.0.0
        │           ├── .gitignore
        │           ├── pyproject.toml
        │           └── src
        │               └── example_b_019915d4
        │                   └── __init__.py
        └── dist
            └── example-019915d4
                ├── example_019915d4-0.0.0.tar.gz
                ├── example_a_019915d4-1.0.0-py3-none-any.whl
                ├── example_a_019915d4-1.0.0.tar.gz
                ├── example_b_019915d4-1.0.0-py3-none-any.whl
                ├── example_b_019915d4-1.0.0.tar.gz
                ├── example_b_019915d4-2.0.0-py3-none-any.whl
                ├── example_b_019915d4-2.0.0.tar.gz
                ├── example_b_019915d4-3.0.0-py3-none-any.whl
                └── example_b_019915d4-3.0.0.tar.gz
        
        19 directories, 24 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-019915d4
  
    ''',
  })
# ---
# name: test_build_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_no_target
  dict({
    'exit_code': 2,
    'stderr': '''
      usage: packse build [-h] [--force] [--short-names] [--no-hash] [--skip-root]
                          [-v] [-q]
                          targets [targets ...]
      packse build: error: the following arguments are required: targets
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
